--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "lint": "eslint 'src/app/**/*.{js,ts,tsx}'"
   },
   "dependencies": {
+    "@azure/communication-email": "^1.0.0",
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@prisma/client": "^6.16.2",
+    "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.8",
+    "email-validator": "^2.0.4",
+    "jose": "^6.1.0",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.36.0",
     "@next/eslint-plugin-next": "^15.5.3",
     "@tailwindcss/postcss": "^4",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
