--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
     "email-validator": "^2.0.4",
     "jose": "^6.1.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sass": "^1.93.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
