--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,13 @@
-name: Lint & Deploy
+name: Lint, Run Unit Tests and Deploy (Main Branch)
 
 on:
   pull_request:
   push:
     branches: [ main ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   GCP_PROJECT: consensus-engine
@@ -25,9 +29,40 @@ jobs:
       - run: npm ci
       - run: npm run lint  # e.g. "eslint . --ext .ts,.tsx --max-warnings=0"
 
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - run: npm ci
+
+      - name: Run tests (Vitest) with coverage
+        run: npm run test:ci
+
+      - name: Publish test results
+        if: always()
+        uses: dorny/test-reporter@v1
+        with:
+          name: Vitest
+          path: reports/junit.xml
+          reporter: jest-junit
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
+          verbose: true
+
   deploy:
     if: github.ref == 'refs/heads/main'
-    needs: lint
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -85,5 +120,5 @@ jobs:
             --region "${{ env.REGION }}" \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars NODE_ENV=production,REACT_APP_BASE_URL="https://ce.dukedan.uk",NODE_OPTIONS="--dns-result-order=ipv4first" \
+            --set-env-vars NODE_ENV=production,NEXTJS_APP_BASE_URL="https://ce.dukedan.uk",NODE_OPTIONS="--dns-result-order=ipv4first" \
             --set-secrets=DATABASE_URL=DATABASE_URL:latest,AUTH_SECRET=AUTH_SECRET:latest,AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING=AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING:latest
