--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint 'src/app/**/*.{js,ts,tsx}'"
+    "lint": "eslint 'src/app/**/*.{js,ts,tsx}'",
+    "test": "vitest",
+    "test:ci": "vitest --run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest --watch",
+    "test:cov": "vitest --coverage"
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
@@ -27,18 +32,26 @@
     "@eslint/js": "^9.36.0",
     "@next/eslint-plugin-next": "^15.5.3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jsdom": "^27.0.0",
+    "msw": "^2.11.3",
     "prettier": "^3.6.2",
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "typescript-eslint": "^8.44.1"
+    "typescript-eslint": "^8.44.1",
+    "vitest": "^3.2.4"
   }
 }
