--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: lint
+    permissions:
+      contents: read
+      checks: write
     steps:
       - uses: actions/checkout@v4
 
