--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,8 @@ jobs:
           files: ./coverage/lcov.info
           fail_ci_if_error: true
           verbose: true
+          env:
+            CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   deploy:
     if: github.ref == 'refs/heads/main'
