--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -35,6 +35,7 @@ jobs:
     permissions:
       contents: read
       checks: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
 
