--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "email-validator": "^2.0.4",
     "i": "^0.3.7",
     "mongodb": "^5.9.2",
@@ -40,6 +41,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
