--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -1,8 +1,14 @@
-name: Lint
+name: Lint (Feature Branches)
 
 on:
   pull_request:
+    branches-ignore: [ main ]
   push:
+    branches-ignore: [ main ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   lint:
