--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "email-validator": "^2.0.4",
