--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint 'src/app/**/*.{js,ts,tsx}'",
-    "test": "jest"
+    "test": "jest",
+    "populate": "node populate.cjs"
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@heroicons/react": "^2.2.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
