--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,5 +66,5 @@ jobs:
             --region "${{ env.REGION }}" \
             --platform managed \
             --allow-unauthenticated \
-            --set-env-vars NODE_ENV=production,REACT_APP_BASE_URL="https://ce.dukedan.uk",NODE_OPTIONS="--dns-result-order=ipv4first" \
-            --set-secrets=MONGODB_URI=DATABASE_URL:latest,AUTH_SECRET=AUTH_SECRET:latest,AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING=AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING:latest
+            --set-env-vars NODE_ENV=production,NEXTJS_APP_BASE_URL="https://ce.dukedan.uk",NEXTAUTH_URL="https://ce.dukedan.uk",NODE_OPTIONS="--dns-result-order=ipv4first" \
+            --set-secrets=MONGODB_URI=DATABASE_URL:latest,NEXTAUTH_SECRET=AUTH_SECRET:latest,AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING=AZURE_COMMUNICATION_SERVICE_CONNECTION_STRING:latest
